Fixed Gallery Spacing A Bit

--- a/style.css
+++ b/style.css
@@ -5,3 +5,13 @@ body {
 h1 {
   color: antiquewhite;
 }
+
+
+
+
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 50px;
+}
